[package]
name = "portablegabi-pallet"
version = "0.1.0"
authors = ["KILT <info@kilt.io>"]
edition = "2018"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "sp-runtime/std",
    "sp-io/std",
    "system/std",
]

[dependencies.serde]
features = ["derive"]
optional = true
version = "^1.0.101"

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "^1.0.0"

[dependencies.sp-runtime]
default-features = false
version = "^2.0.0-alpha.5"

[dependencies.frame-support]
default-features = false
version = "^2.0.0-alpha.5"

[dependencies.system]
default-features = false
package = "frame-system"
version = "^2.0.0-alpha.5"

[dependencies.sp-io]
default-features = false
version = "^2.0.0-alpha.5"

[dependencies.rstd]
default-features = false
package = 'sp-std'
version = "^2.0.0-alpha.5"

[dev-dependencies.sp-core]
default-features = false
version = "^2.0.0-alpha.5"
