[package]
name = "portablegabi-pallet"
version = "0.2.0"
authors = ["KILT <info@kilt.io>"]
edition = "2018"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "sp-runtime/std",
    "sp-io/std",
    "system/std",
    "sp-arithmetic/std",
]

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.111"

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.0"

[dependencies.sp-runtime]
default-features = false
version = "2.0.0-rc2"

[dependencies.frame-support]
default-features = false
version = "2.0.0-rc2"

[dependencies.system]
default-features = false
package = "frame-system"
version = "2.0.0-rc2"

[dependencies.sp-io]
default-features = false
version = "2.0.0-rc2"

[dependencies.rstd]
default-features = false
package = 'sp-std'
version = "2.0.0-rc2"

[dev-dependencies.sp-core]
default-features = false
version = "2.0.0-rc2"

[dev-dependencies.sp-arithmetic]
default-features = false
version = '2.0.0-rc2'
